# destak-documentacao-painel-de-gestao

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
benchmark/gmd_global_2024/: index.html
benchmark_cria/custo_por_cabeca/: index.html
benchmark_cria/faturamento_pecuario_por_ha/: index.html
benchmark_cria/faturamento_por_funcionario/: index.html
benchmark_cria/gmd_global/: index.html
benchmark_cria/lotacao_pasto/: index.html
benchmark_cria/mortalidade_animais_adultos/: index.html
benchmark_cria/mortalidade_bezerros/: index.html
benchmark_cria/precipitacao-anual/: index.html
benchmark_recria/custo_por_cabeca/: index.html
benchmark_recria/faturamento_pecuario_por_ha/: index.html
benchmark_recria/faturamento_por_funcionario/: index.html
benchmark_recria/gmd_global/: index.html
benchmark_recria/lotacao_pasto/: index.html
benchmark_recria/mortalidade_animais_adultos/: index.html
benchmark_recria/precipitacao-anual/: index.html
docs/: historico_de_ajustes.md  index.md  model.md
docs/benchmark/: gmd_global_2024.md
docs/benchmark_cria/: custo_por_cabeca.md  faturamento_pecuario_por_ha.md  faturamento_por_funcionario.md  gmd_global.md  lotacao_pasto.md  mortalidade_animais_adultos.md  mortalidade_bezerros.md  precipitacao-anual.md
docs/benchmark_recria/: custo_por_cabeca.md  faturamento_pecuario_por_ha.md  faturamento_por_funcionario.md  gmd_global.md  lotacao_pasto.md  precipitacao-anual.md  (+1 more)
historico_de_ajustes/: index.html
home/: index.html
model/: index.html
search/: search_index.json
site/: 404.html  index.html
(+31 files in other folders)
